Internet alert fixed width issue on mobile

--- a/style.css
+++ b/style.css
@@ -2565,6 +2565,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   color: var(--white-color);
   background-color: rgba(255, 0, 0, 0.308);
   transition: .3s;
+  width: calc(100% - 20px);
   position: fixed;
   top: 50%;
   left: 50%;
@@ -2786,6 +2787,10 @@ html.translated-rtl[lang=ur] #announcement font {
 
   .comment-form-email, .comment-form-author, .comment-form-url {
     width: calc(100% / 3 - 14px) !important;
+  }
+
+  #internet-alert{
+    width: auto;
   }
 }
 
